스키마수정및 hop read컨트롤러 업로드
